syntax = "proto3";
package rangeserver;

message RangeId {
    string keyspace_id = 1;
    string range_id = 2;
}

message RangeKey {
    RangeId range = 1;
    bytes key = 2;
}

service RangeServer {
    rpc Prefetch (PrefetchRequest) returns (PrefetchResponse);
    rpc Replicate (stream ReplicateRequest) returns (stream ReplicateResponse);
}

message PrefetchRequest {
    // Request message contains a range_key, which is a tuple containing a range and key to prefetch
    repeated RangeKey range_key = 1;
    string transaction_id = 2;
}

message PrefetchResponse {
    string status = 1;
}

message Record {
    bytes key = 1;
    bytes value = 2;
}

message ReplicateInitRequest {
    RangeId range = 2;
}

message ReplicateInitResponse {
    bool success = 1;
}

message ReplicateDataRequest {
    bytes transaction_id = 1;
    RangeId range = 2;
    repeated Record puts = 3;
    repeated bytes deletes = 4;
}

message ReplicateDataResponse {
    RangeId range = 1;
    bytes latest_persisted_transaction_id = 2;
}

message ReplicateRequest {
    oneof request {
        ReplicateInitRequest init = 1;
        ReplicateDataRequest data = 2;
    }
}

message ReplicateResponse {
    oneof response {
        ReplicateInitResponse init = 1;
        ReplicateDataResponse data = 2;
    }
}